feat: add section activities and mobile adaptation this section

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,4 @@ html {
 @import "style/_burgerMenu.scss";
 @import "style/_welcome.scss";
 @import "style/_oNas.scss";
+@import "style/_activities.scss";
