feat: add section dogmatis

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,3 +23,4 @@ html {
 @import "style/_welcome.scss";
 @import "style/_oNas.scss";
 @import "style/_activities.scss";
+@import "style/_dogmatics.scss";
