--- a/src/style/_activities.scss
+++ b/src/style/_activities.scss
@@ -127,6 +127,9 @@
 
 @media (max-width: 641px) {
 	.activities {
+		&__title {
+			text-align: center;
+		}
 		&__flex-container {
 			flex-direction: column;
 		}
