feat: add footer

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,3 +24,5 @@ html {
 @import "style/_oNas.scss";
 @import "style/_activities.scss";
 @import "style/_dogmatics.scss";
+@import "style/_minister.scss";
+@import "style/_footer.scss";
