--- a/src/style/_minister.scss
+++ b/src/style/_minister.scss
@@ -27,6 +27,85 @@
 		height: auto;
 		object-fit: cover;
 	}
+	&__divider {
+		margin-top: 40px;
+		background-color: white;
+		width: 100%;
+		height: 1px;
+	}
+	&__contacts {
+		margin-top: 30px;
+		display: flex;
+		width: 100%;
+		justify-content: space-between;
+		&-block {
+			display: flex;
+			justify-content: space-between;
+			width: 202px;
+		}
+		&-social {
+			width: 40px;
+		}
+		&-telephone-mail {
+			display: flex;
+			/* flex-direction: column-reverse; */
+			width: 311px;
+			justify-content: space-between;
+			align-items: center;
+			cursor: pointer;
+		}
+	}
+	&__link-telephone {
+		position: relative;
+		text-decoration: none;
+		@include text($text-color-primary);
+		font-size: 14px;
+		color: black;
+		&:before {
+			content: "";
+			position: absolute;
+			background: url("./icons/contacts_icons/free-icon-telephone.png") no-repeat center center;
+			background-size: contain;
+			height: 30px;
+			width: 30px;
+			top: 50%;
+			transform: translateY(-50%);
+			left: -39px;
+			z-index: 100;
+			display: inline-block;
+		}
+	}
+	&__link-mail {
+		position: relative;
+		@include text($text-color-primary);
+		font-size: 14px;
+		text-decoration: none;
+		color: black;
+		&:before {
+			content: "";
+			position: absolute;
+			background: url("./icons/contacts_icons/free-icon-email.png") no-repeat center center;
+			background-size: contain;
+			height: 40px;
+			width: 25px;
+			left: -39px;
+			top: 50%;
+			transform: translateY(-50%);
+			display: inline-block;
+		}
+	}
+}
+
+@media (max-width: 1200px) {
+	.minister {
+		&__contacts {
+			flex-direction: column;
+			&-telephone-mail {
+				margin-top: 20px;
+				margin-left: 40px;
+			}
+		}
+	}
 }
 
 @media (max-width: 1100px) {
@@ -47,9 +126,23 @@
 @media (max-width: 934px) {
 	.minister {
 		&__img {
-			-o-object-fit: cover;
+			object-fit: cover;
 			object-fit: cover;
 			width: 436px;
+		}
+	}
+}
+@media (max-width: 872px) {
+	.minister {
+		&__contacts {
+			&-telephone-mail {
+				flex-direction: column;
+				align-items: flex-start;
+			}
+		}
+		&__link-mail {
+			margin-top: 10px;
+			margin-left: 2px;
 		}
 	}
 }
