--- a/src/index.scss
+++ b/src/index.scss
@@ -26,3 +26,4 @@ html {
 @import "style/_dogmatics.scss";
 @import "style/_minister.scss";
 @import "style/_footer.scss";
+@import "style/modal.scss";
