--- a/src/style/_fonts.scss
+++ b/src/style/_fonts.scss
@@ -29,6 +29,10 @@
 		
 }
 @font-face {
+	font-family: Poppins-SemiBold;
+	src: url('./fonts/Poppins/Poppins-SemiBold.ttf');
+}
+@font-face {
 	font-family: Poppins-Bold;
 	src: url('./fonts/Poppins/Poppins-Bold.ttf');
 		
