--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+	position: relative;
 	background-color: #121212;
 	padding: 100px 0 80px 0;
 	&__title {
@@ -101,6 +102,7 @@
 			cursor: pointer;
 			border-radius: 7px;
 			margin-top: 40px;
+			letter-spacing: 0.8px;
 			transition: all ease 0.3s;
 			&:hover {
 				background-color: rgb(99, 99, 4);
