--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,5 @@ html {
 @import "style/_minister.scss";
 @import "style/_footer.scss";
 @import "style/modal.scss";
+@import "style/modalResult.scss";
+@import "style/spinner.scss";
