--- a/src/style/_fonts.scss
+++ b/src/style/_fonts.scss
@@ -1,43 +1,43 @@
 @font-face {
-	font-family: Montserrat-Italic;
+	font-family: "Montserrat-Italic";
 	src: url('./fonts/Montserrat/Montserrat-Italic.ttf');
 		
 }
 @font-face {
-	font-family: Montserrat-Regular;
+	font-family: "Montserrat-Regular";
 	src: url('./fonts/Montserrat/Montserrat-Regular.ttf');
 		
 }
 @font-face {
-	font-family: Montserrat-BoldItalic;
+	font-family: "Montserrat-BoldItalic";
 	src: url('./fonts/Montserrat/Montserrat-BoldItalic.ttf');
 		
 }
 @font-face {
-	font-family: Poppins-Regular;
+	font-family: "Poppins-Regular";
 	src: url('./fonts/Poppins/Poppins-Regular.ttf');
 		
 }
 @font-face {
-	font-family: Poppins-Medium;
+	font-family: "Poppins-Medium";
 	src: url('./fonts/Poppins/Poppins-Medium.ttf');
 		
 }
 @font-face {
-	font-family: Poppins-Black;
+	font-family: "Poppins-Black";
 	src: url('./fonts/Poppins/Poppins-Black.ttf');
 		
 }
 @font-face {
-	font-family: Poppins-SemiBold;
+	font-family: "Poppins-SemiBold";
 	src: url('./fonts/Poppins/Poppins-SemiBold.ttf');
 }
 @font-face {
-	font-family: Poppins-Bold;
+	font-family: "Poppins-Bold";
 	src: url('./fonts/Poppins/Poppins-Bold.ttf');
 		
 }
 @font-face {
-	font-family: Roboto-Regular;
+	font-family: "Roboto-Regular";
 	src: url('./fonts/Roboto/Roboto-Regular.ttf');
 }
