--- a/src/style/_modalResult.scss
+++ b/src/style/_modalResult.scss
@@ -19,12 +19,24 @@
 		border: none;
 		top: 9.31px;
 		right: 9.31px;
+		width: 18px;
+		transition: all ease 0.3s;
 		cursor: pointer;
+		&:hover {
+			box-shadow: 2px -2px 4px rgba(0, 0, 0, 0.3);
+		}
+		&:active {
+			box-shadow: 2px -0.9px 4px rgba(0, 0, 0, 0.3);
+		 }
 	}
 	&__icon-close {
 		width: 11.38px;
 		height: 11.38px;
+		&:active {
+			transform: scale(0.75);
+		 }
 	}
+
 	&__title {
 		color: $text-color-primary;
 		font-size: 34px;
@@ -44,6 +56,17 @@
 		visibility: visible;
 		opacity: 1;
 		z-index: 10000;
+	}
+}
+
+@media (max-width: 768px) {
+	.modal-result {
+		&__title {
+			font-size: 28px;
+		}
+		&__text {
+			@include text-768px();
+		}
 	}
 }
 
