--- a/src/style/_minister.scss
+++ b/src/style/_minister.scss
@@ -18,31 +18,31 @@
 	&__text {
 		width: 100%;
 		@include text($text-color-primary);
-	}
-	&__text-pastor-one {
-		margin-bottom: 15px;
-		
+		&-pastor-two {
+			margin-top: 15px;
+		}
 	}
 	&__img {
 		width: 470px;
-		height: auto;
+		height: 530px;
 		object-fit: cover;
+		object-position: center 0%;
 	}
 	&__divider {
-		margin-top: 40px;
+		margin-top: 60px;
 		background-color: white;
 		width: 100%;
 		height: 1px;
 	}
 	&__contacts {
-		margin-top: 30px;
+		margin-top: 45px;
 		display: flex;
 		width: 100%;
 		justify-content: space-between;
 		&-block {
 			display: flex;
 			justify-content: space-between;
-			width: 202px;
+			width: 164px;
 		}
 		&-social {
 			width: 40px;
@@ -102,7 +102,6 @@
 			color: black;
 		}
 	}
-	
 }
 
 @media (max-width: 1200px) {
@@ -164,7 +163,7 @@
 			-o-object-fit: cover;
 			object-fit: cover;
 			width: 366px;
-			height: 620px;
+			height: 570px;
 		}
 	}
 }
@@ -179,9 +178,15 @@
 		}
 		&__img {
 			width: 291px;
-			height: 570px;
+			height: 510px;
 		}
-		
+	}
+}
+@media (max-width: 671px) {
+	.minister {
+		&__img {
+			height: 533px;
+		}
 	}
 }
 @media (max-width: 641px) {
